plugins {
  id 'java-library'
  id 'idea'
  id 'maven-publish'

	alias(libs.plugins.ebean)

	alias(libs.plugins.lombok)
	alias(libs.plugins.errorprone)
}

repositories {
  mavenLocal()
  mavenCentral()
	maven { url 'https://jitpack.io' }
}

tasks.withType(JavaCompile).configureEach {
  options.encoding = 'UTF-8'
  options.compilerArgs.addAll(['-Xlint:all,-serial', '-parameters', '-g', '-Xmaxwarns', '999'])
  options.release.set(17) // javac --release 7..21+
  options.deprecation = true

  options.errorprone {
    enabled = true
    disableWarningsInGeneratedCode = true
    excludedPaths = ".*/(generated|test).*/.*"
    disable("MissingSummary")
    disable("UnusedVariable")
    errorproneArgs = ["--illegal-access=warn"]
  }
}
// https://docs.gradle.org/current/userguide/publishing_maven.html
publishing {
  publications { // artifactId = folder name
    maven(MavenPublication) {
      from components.java
    }
  }
}
// https://docs.gradle.org/current/userguide/publishing_maven.html
java {
  withSourcesJar()
//  withJavadocJar()
}

dependencies {
  errorprone "com.google.errorprone:error_prone_core:latest.release"

	compileOnly libs.javaxServletApi

  implementation libs.bundles.springMini, libs.bundles.springSecurity

  implementation project(':click')
	implementation(libs.slf4jApi, libs.slf4jJCL, libs.slf4jLog4j)
	api('com.github.magicprinc:hibean:1.8.3')
	api("io.ebean:ebean-querybean:latest.release")
	annotationProcessor("io.ebean:querybean-generator:latest.release")
	implementation(libs.bundles.jackson)

  //*** TEST TEST TEST
  testImplementation libs.bundles.junit

  testRuntimeOnly libs.slf4jSimple
  testImplementation project(':click-mock')
}
configurations.configureEach { // .implementation  // https://tomgregory.com/how-to-exclude-gradle-dependencies/
	exclude group: "velocity", module: "velocity" // 1.3 they come from somewhere..
	exclude group: "commons-logging", module: "commons-logging" // spring?
	exclude group: 'org.springframework', module: 'spring-jcl'
	exclude group: "org.apache.logging.log4j", module: "log4j-api"
	exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
	exclude group: "log4j", module: "log4j"
	exclude group: "org.jboss.slf4j", module: "slf4j-jboss-logmanager"

	exclude group: "com.mchange", module: "c3p0"
	exclude group: 'com.google.guava', module: 'listenablefuture'
}

idea { module { downloadJavadoc = true; downloadSources = true } }

test {
  useJUnitPlatform()
  testLogging {
    events "passed", "skipped", "failed"
    showStandardStreams = true // show standard out & err of the test JVM on the console
    showExceptions = true
    exceptionFormat = 'full'
  }
  enableAssertions = true
  maxHeapSize = "500m"

  systemProperty("file.encoding", "UTF-8")
  systemProperty("user.language", "en")
  Locale.setDefault(new Locale("en", "US"));
}
lombok { version = "latest.release" }